--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:04:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.911 inHg (0.024)</td>
+        <td class="data">29.911 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             29.914</span><br/>
-          <span title="12:01:01 AM">
-            29.911</span>
+          <span title="12:07:01 AM">
+            29.909</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             29.914</span><br/>
-          <span title="12:01:01 AM (Sunday)">
-            29.911</span>
+          <span title="12:07:01 AM (Sunday)">
+            29.909</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:35 AM">
-            1</span><br/>
-          286
+          <span title="12:07:27 AM">
+            2</span><br/>
+          304
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:35 AM (Sunday)">
-            1</span><br/>
-          286
+          <span title="12:07:27 AM (Sunday)">
+            2</span><br/>
+          304
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -421,9 +421,9 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
-          0</td>
+          1</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          292
+          328
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          292
+          328
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 9 hours, 17 minutes</td>
+      <td class="data">4 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 9 hours, 17 minutes</td>
+      <td class="data">4 days, 9 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
