--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:09:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.8&#176;F</td>
+        <td class="data">45.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">27%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.911 inHg (0.020)</td>
+        <td class="data">29.912 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.2&#176;F</td>
+        <td class="data">85.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="12:02:45 AM">
-            82.1</span>
+          <span title="12:12:39 AM">
+            82.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="12:02:45 AM (Sunday)">
-            82.1</span>
+          <span title="12:12:39 AM (Sunday)">
+            82.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:45 AM" class="loval">
-            82.1</span>
+          <span title="12:12:39 AM" class="loval">
+            82.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:45 AM (Sunday)" class="loval">
-            82.1</span>
+          <span title="12:12:39 AM (Sunday)" class="loval">
+            82.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            45.8</span><br/>
+          <span title="12:10:33 AM">
+            47.6</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:01 AM (Sunday)">
-            45.8</span><br/>
+          <span title="12:10:33 AM (Sunday)">
+            47.6</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
         </td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            28</span><br/>
+          <span title="12:10:33 AM">
+            30</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:01 AM (Sunday)">
-            28</span><br/>
+          <span title="12:10:33 AM (Sunday)">
+            30</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          328
+          344
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          328
+          344
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 9 hours, 22 minutes</td>
+      <td class="data">4 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 9 hours, 22 minutes</td>
+      <td class="data">4 days, 9 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
