--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:44:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.9&#176;F</td>
+        <td class="data">45.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (0.023)</td>
+        <td class="data">29.915 inHg (0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.9&#176;F</td>
+        <td class="data">84.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="12:43:35 AM">
-            79.2</span>
+          <span title="12:48:43 AM">
+            78.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="12:43:35 AM (Sunday)">
-            79.2</span>
+          <span title="12:48:43 AM (Sunday)">
+            78.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:35 AM" class="loval">
-            79.2</span>
+          <span title="12:48:43 AM" class="loval">
+            78.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:43:35 AM (Sunday)" class="loval">
-            79.2</span>
+          <span title="12:48:43 AM (Sunday)" class="loval">
+            78.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:01 AM">
-            29.917</span><br/>
+          <span title="12:46:01 AM">
+            29.918</span><br/>
           <span title="12:26:01 AM">
             29.907</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:43:01 AM (Sunday)">
-            29.917</span><br/>
+          <span title="12:46:01 AM (Sunday)">
+            29.918</span><br/>
           <span title="12:26:01 AM (Sunday)">
             29.907</span>
         </td>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:07:27 AM">
-            2</span><br/>
-          304
+          <span title="12:48:59 AM">
+            3</span><br/>
+          308
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:07:27 AM (Sunday)">
-            2</span><br/>
-          304
+          <span title="12:48:59 AM (Sunday)">
+            3</span><br/>
+          308
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          70
+          107
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          70
+          107
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="12:40:01 AM">
-            84.9</span>
+          <span title="12:47:01 AM">
+            84.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="12:40:01 AM (Sunday)">
-            84.9</span>
+          <span title="12:47:01 AM (Sunday)">
+            84.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 9 hours, 57 minutes</td>
+      <td class="data">4 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 9 hours, 57 minutes</td>
+      <td class="data">4 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
