--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:49:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.915 inHg (0.017)</td>
+        <td class="data">29.915 inHg (0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SE (135&#176;)</td>
+        <td class="data">2 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.7&#176;F</td>
+        <td class="data">84.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
     </tbody>
   </table>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:33:37 AM">
-            31</span><br/>
+          <span title="12:51:33 AM">
+            32</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:33:37 AM (Sunday)">
-            31</span><br/>
+          <span title="12:51:33 AM (Sunday)">
+            32</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -421,9 +421,9 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
-          0</td>
+          1</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          107
+          339
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          107
+          339
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="12:47:01 AM">
-            84.7</span>
+          <span title="12:52:01 AM">
+            84.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="12:47:01 AM (Sunday)">
-            84.7</span>
+          <span title="12:52:01 AM (Sunday)">
+            84.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="12:16:01 AM">
             31</span><br/>
-          <span title="12:00:01 AM">
-            30</span>
+          <span title="12:51:01 AM">
+            29</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:16:01 AM (Sunday)">
             31</span><br/>
-          <span title="12:00:01 AM (Sunday)">
-            30</span>
+          <span title="12:51:01 AM (Sunday)">
+            29</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 10 hours, 2 minutes</td>
+      <td class="data">4 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 10 hours, 2 minutes</td>
+      <td class="data">4 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
