--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 01:09:00 AM</p>
+    <p class="lastupdate">09/06/2020 01:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.9&#176;F</td>
+        <td class="data">47.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">34%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.918 inHg (0.012)</td>
+        <td class="data">29.915 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="01:08:51 AM">
-            78.4</span>
+          <span title="01:12:27 AM">
+            78.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="01:08:51 AM (Sunday)">
-            78.4</span>
+          <span title="01:12:27 AM (Sunday)">
+            78.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:08:51 AM" class="loval">
-            78.4</span>
+          <span title="01:12:27 AM" class="loval">
+            78.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:08:51 AM (Sunday)" class="loval">
-            78.4</span>
+          <span title="01:12:27 AM (Sunday)" class="loval">
+            78.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:57:35 AM">
+          <span title="01:13:59 AM">
             47.6</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:57:35 AM (Sunday)">
+          <span title="01:13:59 AM (Sunday)">
             47.6</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:57:33 AM">
-            33</span><br/>
+          <span title="01:13:47 AM">
+            34</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:57:33 AM (Sunday)">
-            33</span><br/>
+          <span title="01:13:47 AM (Sunday)">
+            34</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          330
+          327
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          330
+          327
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="01:02:01 AM">
-            84.3</span>
+          <span title="01:12:01 AM">
+            84.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="01:02:01 AM (Sunday)">
-            84.3</span>
+          <span title="01:12:01 AM (Sunday)">
+            84.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 10 hours, 22 minutes</td>
+      <td class="data">4 days, 10 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 10 hours, 22 minutes</td>
+      <td class="data">4 days, 10 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
