--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 01:14:00 AM</p>
+    <p class="lastupdate">09/06/2020 01:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.3&#176;F</td>
+        <td class="data">78.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.3&#176;F</td>
+        <td class="data">78.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.3&#176;F</td>
+        <td class="data">78.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.6&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.915 inHg (0.014)</td>
+        <td class="data">29.917 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="01:12:27 AM">
-            78.2</span>
+          <span title="01:18:15 AM">
+            78.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="01:12:27 AM (Sunday)">
-            78.2</span>
+          <span title="01:18:15 AM (Sunday)">
+            78.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:12:27 AM" class="loval">
-            78.2</span>
+          <span title="01:18:15 AM" class="loval">
+            78.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:12:27 AM (Sunday)" class="loval">
-            78.2</span>
+          <span title="01:18:15 AM (Sunday)" class="loval">
+            78.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          327
+          325
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          327
+          325
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 10 hours, 27 minutes</td>
+      <td class="data">4 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 10 hours, 27 minutes</td>
+      <td class="data">4 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
